<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkbrown"
    android:orientation="vertical"
    android:layout_marginLeft="0dp"
    tools:context=".Hot_Beverage"
    android:layout_gravity="center"
    tools:layout_editor_absoluteX="104dp"
    tools:layout_editor_absoluteY="6dp">


    <LinearLayout
        android:layout_width="468dp"
        android:layout_height="411dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_weight="5"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:text="Droid Cafe"
            android:textColor="@color/maroon"
            android:textColorHighlight="@color/Maroon"
            android:textSize="60dp"
            android:textStyle="bold"></TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:text="@string/order_eat"
            android:textColor="@color/white"
            android:textColorHighlight="@color/Maroon"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="148dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/SaddleBrown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="176dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-70dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/cafedriod" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="5"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:fontFamily="cursive"
                    android:text="@string/cold_beverage"
                    android:textColor="@color/WhiteSmoke"
                    android:textSize="35dp"
                    android:textStyle="bold"></TextView>


            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cold_beverage"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_Lemonide"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="17dp"
                    android:background="@color/white"
                    android:text="@string/lemonade"
                    android:textSize="17dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"></TextView>


                <ImageView
                    android:id="@+id/imgLemonide"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="-140dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/lemonad" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="90dp"
                    android:text="Price: $2"
                    android:textColor="@color/Goldenrod"
                    android:textSize="22dp"
                    android:textStyle="bold"></TextView>
                <Button
                    android:id="@+id/LemonideAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                   android:backgroundTint="@color/Goldenrod"
                    android:textColor="@color/black"
                    android:text="Add"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/textIceCoffe"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="17dp"
                    android:background="@color/white"
                    android:text="@string/ice_coffe"
                    android:textSize="17dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"></TextView>


                <ImageView
                    android:id="@+id/imgIceCoffe"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="-140dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icedcoffee" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="90dp"
                    android:text="Price: $2"
                    android:textColor="@color/Goldenrod"
                    android:textSize="22dp"
                    android:textStyle="bold"></TextView>
                <Button
                    android:id="@+id/IceCoffeAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:backgroundTint="@color/Goldenrod"
                    android:textColor="@color/black"
                    android:text="Add"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/text_VanillaIceCafe"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="17dp"
                    android:background="@color/white"
                    android:text="@string/vanilla_icecafe"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold"></TextView>


                <ImageView
                    android:id="@+id/imgVanillaIceCafe"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="-140dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vanillaicedcapp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="90dp"
                    android:text="Price: $2"
                    android:textColor="@color/Goldenrod"
                    android:textSize="22dp"
                    android:textStyle="bold"></TextView>
                <Button
                    android:id="@+id/VanillaIceCafeAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:backgroundTint="@color/Goldenrod"
                    android:textColor="@color/black"
                    android:text="Add"
                    android:textSize="20dp" />




            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="5"
            android:orientation="vertical">




        </LinearLayout>



    </LinearLayout>


</ScrollView>

